--- a/README.org
+++ b/README.org
@@ -1,42 +1,44 @@
 #+TITLE: Roadmap for Smart Contract Developer
 #+AUTHOR: DANG QUANG VU
 
-* [[https://docs.soliditylang.org/en/v0.7.0/introduction-to-smart-contracts.html][Solidity]]
-* FrameWork
-- Hardhat
-- Truffle
-* Testing
-* Security
-** [[https://www.getastra.com/blog/security-audit/an-introduction-to-smart-contract-security/?utm_id=scsa.123&gclid=CjwKCAjwk6-LBhBZEiwAOUUDpyegGOJw6ofQ4HnD2ob23wz3pL59PFxFedQy4HTFkxrDYXWUHJbdVxoCD08QAvD_BwE][An Introduction to Smart Contract Security]]
-** Tools
-- [[https://github.com/crytic/slither/wiki/Detector-Documentation][Slither]]
-- [[https://github.com/trailofbits/manticore][Manticore]]
+* Languages
+- Solidity
+- Javascript
+- Go
+- =Rust=
+------------------------
+* Ethereum Blockchain
+- FrameWork Solidity
+  + Hardhat
+  + Truffle
+- Testing
+- Security
+  + [[https://www.getastra.com/blog/security-audit/an-introduction-to-smart-contract-security/?utm_id=scsa.123&gclid=CjwKCAjwk6-LBhBZEiwAOUUDpyegGOJw6ofQ4HnD2ob23wz3pL59PFxFedQy4HTFkxrDYXWUHJbdVxoCD08QAvD_BwE][An Introduction to Smart Contract Security]]
+  + Tools
+    - [[https://github.com/crytic/slither/wiki/Detector-Documentation][Slither]]
+    - [[https://github.com/trailofbits/manticore][Manticore]]
 * [[https://docs.openzeppelin.com/upgrades-plugins/1.x/][Upgrade Smart Contract]]
-* [[https://eips.ethereum.org/all][Improvement Proposals]]
+* [[https://eips.ethereum.org/all][Improvement Proposals - EIP]]
+------Front-End------
 * Web3
-** [[https://web3js.readthedocs.io/en/v1.2.9/web3-eth-personal.html#ecrecover][Web3js]]
-** [[https://web3py.readthedocs.io/en/stable/][Web3.py]]
-** Abigen
-*** Language Supports
-- Go (Default)
-- Java
-- C++
-*** TypeChain
-- TypeScript
+- [[https://web3js.readthedocs.io/en/v1.2.9/web3-eth-personal.html#ecrecover][Web3js]]
+- [[https://web3py.readthedocs.io/en/stable/][Web3.py]]
+- Abi generation
+  + Language Supports
+    - Go (Default)
+    - Java
+    - C++
+  + TypeChain
+    - TypeScript
 * DApps
-** React
-** DWeb
-- IPFS
-- Fleek
-* Other
-** Tools
-*** Npm package
-- web3
-- eth-sig-util
-*** Real Project
-**** DEX
-- UniSwap
-- PancakeSwap
-**** Ocean
-**** Multi-sig Wallet
-**** MetaTransaction
+- React
+- DWeb
+  + IPFS
+  + Fleek
+* Real Project
+- DEX
+  + [[https://uniswap.org/][UniSwap]]
+  + [[https://pancakeswap.finance/][PancakeSwap]]
+- [[https://market.oceanprotocol.com/][Ocean]]
+- [[https://wallet.gnosis.io/#/wallets][Multi-sig Wallet]]
+- [[https://docs.openzeppelin.com/contracts/4.x/api/metatx][MetaTransaction]]
